--- a/css/less/index.less
+++ b/css/less/index.less
@@ -1,12 +1,13 @@
-// Default styles reset
+// Utils
 @import "./utils/_reset.less";
+@import "./utils/_layout.less";
 
-// Typography
-
-// Fonts
+// typography
 @import "./typography/_fonts.less";
 
-// Theme
-
-//colors
+// theme
 @import "./theme/_colors.less";
+@import "./theme/backgrounds.less";
+// element CSS components
+@import "./components/_global.less";
+@import "./components/_header.less";
