--- a/css/less/index.less
+++ b/css/less/index.less
@@ -11,3 +11,4 @@
 // element CSS components
 @import "./components/_global.less";
 @import "./components/_header.less";
+@import "./components/_search.less";
