--- a/css/less/components/_global.less
+++ b/css/less/components/_global.less
@@ -3,6 +3,27 @@ body {
   font-size: 14px;
   font-family: "Helvetica Neue", sans-serif;
   font-weight: normal;
+  text-transform: capitalize;
+}
+
+button {
+  cursor: pointer;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Gotham", sans-serif;
+  font-weight: bold;
+  text-transform: capitalize;
+  margin: 15px;
+}
+
+h1 {
+  font-size: 4em;
 }
 
 a {
@@ -16,6 +37,11 @@ a {
   color: white;
   border: none;
   outline: none;
+  transition: all 0.5s ease-out;
+  &:hover {
+    background-color: white;
+    color: @pink;
+  }
 }
 
 .uppercase {
