--- a/css/less/components/_global.less
+++ b/css/less/components/_global.less
@@ -4,6 +4,12 @@ body {
   font-family: "Helvetica Neue", sans-serif;
   font-weight: normal;
   text-transform: capitalize;
+  color: #888888;
+  line-height: 1.4em;
+}
+
+p {
+  margin: 15px;
 }
 
 button {
@@ -24,6 +30,10 @@ h6 {
 
 h1 {
   font-size: 4em;
+}
+
+h2 {
+  font-size: 1.8em;
 }
 
 a {
