--- a/css/less/index.less
+++ b/css/less/index.less
@@ -1,6 +1,5 @@
 // Utils
 @import "./utils/_reset.less";
-@import "./utils/_layout.less";
 
 // typography
 @import "./typography/_fonts.less";
@@ -8,7 +7,10 @@
 // theme
 @import "./theme/_colors.less";
 @import "./theme/backgrounds.less";
+
+@import "./utils/_layout.less";
 // element CSS components
 @import "./components/_global.less";
 @import "./components/_header.less";
 @import "./components/_search.less";
+@import "./components/_hot-ads.less";
