--- a/css/less/utils/_layout.less
+++ b/css/less/utils/_layout.less
@@ -1,10 +1,14 @@
 .container {
-  width: 1400px;
+  max-width: 1400px;
   margin: 0 auto;
 }
 
 .container-full-width {
   width: auto;
+}
+
+.border {
+  border: 1px solid @lightGray;
 }
 
 .flex-container {
@@ -13,4 +17,78 @@
 
 .margin-x-auto {
   margin: 0 auto;
+}
+
+#products {
+  margin-top: 15px;
+}
+
+.products-show {
+  .container-full-width;
+  padding: 5px 25px;
+  .margin-x-auto;
+  h2 {
+    border-bottom: 1px solid @lightGray;
+    font-weight: normal;
+    margin: 25px auto;
+    width: 90%;
+    padding-bottom: 15px;
+  }
+}
+
+.products-grid {
+  .margin-x-auto;
+  position: relative;
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 15px;
+
+  > span {
+    position: absolute;
+    top: 40%;
+    font-size: 3em;
+    color: black;
+    cursor: pointer;
+  }
+
+  > span:first-of-type {
+    left: -5%;
+  }
+  > span:last-of-type {
+    right: -5%;
+  }
+
+  article {
+    .border;
+    background-color: white;
+    img {
+      width: 100%;
+      .margin-x-auto;
+    }
+
+    > h3,
+    > span {
+      margin: 5px 15px;
+    }
+
+    div {
+      padding: 15px;
+      justify-content: space-between;
+
+      * {
+        margin: 5px 0;
+      }
+
+      button {
+        .flat-btn;
+        padding: 5px 10px;
+        .border;
+      }
+
+      span {
+        color: @pink;
+      }
+    }
+  }
 }
