--- a/css/less/index.less
+++ b/css/less/index.less
@@ -14,3 +14,4 @@
 @import "./components/_header.less";
 @import "./components/_search.less";
 @import "./components/_hot-ads.less";
+@import "./components/_footer.less";
