fix container problem

--- a/css/less/utils/_layout.less
+++ b/css/less/utils/_layout.less
@@ -4,7 +4,7 @@
 }
 
 .container-full-width {
-  width: auto;
+  width: 100%;
 }
 
 .border {
@@ -29,7 +29,6 @@
 }
 
 .products-show {
-  .container-full-width;
   padding: 5px 25px;
   .margin-x-auto;
   h2 {
