--- a/css/index.css
+++ b/css/index.css
@@ -167,7 +167,7 @@ table {
   margin: 0 auto;
 }
 .container-full-width {
-  width: auto;
+  width: 100%;
 }
 .border {
   border: 1px solid #88888869;
@@ -186,7 +186,6 @@ table {
   display: grid;
 }
 .products-show {
-  width: auto;
   padding: 5px 25px;
   margin: 0 auto;
 }
