--- a/css/less/components/_global.less
+++ b/css/less/components/_global.less
@@ -6,10 +6,22 @@ body {
   text-transform: capitalize;
   color: #888888;
   line-height: 1.4em;
-}
 
-p {
-  margin: 15px;
+  // Large
+  @media screen and (max-width: 992px) {
+    font-size: 12px;
+    line-height: 1.8em;
+  }
+
+  //Medium
+  @media screen and (max-width: 768px) {
+    font-size: 10px;
+    line-height: 2em;
+  }
+
+  //Small
+  @media screen and (max-width: 576px) {
+  }
 }
 
 button {
@@ -66,6 +78,22 @@ a {
   align-items: center;
 }
 
+.flex-justify-center {
+  justify-content: center;
+}
+
+.flex-justify-around {
+  justify-content: space-around;
+}
+
+.flex-justify-between {
+  justify-content: space-between;
+}
+
+.flex-justify-start {
+  justify-content: start;
+}
+
 .messages-number:after {
   content: "1";
   position: absolute;
@@ -75,4 +103,30 @@ a {
   color: white;
   border-radius: 25%;
   background-color: #d35266;
+}
+
+.flat-btn {
+  padding: 1em 1.5em;
+  border: none;
+  outline: none;
+  color: @dark;
+  background-color: white;
+  box-shadow: none;
+}
+
+.nextItem {
+  width: 50px;
+  height: 50px;
+  color: #d35266;
+  font-size: 4em;
+  padding: 16px 0 0 16px;
+  position: absolute;
+  top: 40%;
+  border-radius: 50%;
+  border: 1px solid @lightGray;
+  cursor: pointer;
+  // Large
+  @media screen and (max-width: 1615px) {
+    display: none;
+  }
 }
