--- a/css/less/components/_search.less
+++ b/css/less/components/_search.less
@@ -1,26 +1,12 @@
-.flat-btn {
-  padding: 1em 1.5em;
-  border: none;
-  outline: none;
-  color: @dark;
-  background-color: white;
-  box-shadow: none;
-}
-
-#search {
-  height: 40vh;
-  position: relative;
-  background-color: @pink;
-  color: white;
-  z-index: 1;
+.backOverlay(@height: 400px, @top:-15% , @left:-20% ) {
   &:after {
-    width: 50%;
-    height: 110%;
+    width: 100vw;
+    height: @height;
     content: "";
     background: url(../../../img/search-overlay.png) no-repeat top;
     opacity: 0.1;
-    top: -15%;
-    left: 0;
+    top: @top;
+    left: @left;
     bottom: 0;
     right: 0;
     position: absolute;
@@ -34,13 +20,74 @@
       transform: rotate(10deg);
     }
   }
+}
+
+.text-alignment {
   > div {
     flex-direction: column;
-    text-align: center;
+
     justify-content: space-around;
-    width: 80%;
     height: 100%;
   }
+}
+
+.search-input-container {
+  .search-container {
+    .margin-x-auto;
+    .grid-container;
+    grid-template-columns: 1fr 3fr 2fr 0.5fr;
+    column-gap: 5px;
+
+    // Large
+    @media screen and (max-width: 992px) {
+      width: 90%;
+    }
+
+    //Medium
+    @media screen and (max-width: 768px) {
+      grid-template-columns: 1fr;
+      grid-template-rows: repeat(4, 1fr);
+      row-gap: 5px;
+    }
+
+    > button {
+      .flat-btn;
+      padding: 15px 20px;
+      &:last-child {
+        background-color: @dark;
+        a {
+          color: white;
+        }
+      }
+    }
+  }
+}
+
+.search {
+  &#search {
+    height: 400px;
+    .backOverlay();
+    .search-input-container;
+    .text-alignment;
+    text-align: center;
+  }
+  &#results {
+    height: auto;
+    .search-input-container;
+    .search-container {
+      margin: 25px 0;
+    }
+    .text-alignment;
+    > div {
+      padding: 15px 15%;
+      text-align: left;
+    }
+  }
+  position: relative;
+  background-color: @pink;
+  color: white;
+  z-index: 1;
+
   &-text {
     img {
       height: 100px;
@@ -51,30 +98,12 @@
     }
   }
 
-  &-container {
-    > button {
-      .flat-btn;
-
-      &:last-child {
-        background-color: @dark;
-        a {
-          color: white;
-        }
-      }
-    }
-
-    input {
-      padding: 1em 1.5em;
-      border: none;
-      outline: none;
-      width: 400px;
-      color: @dark;
-      background-color: white;
-      box-shadow: none;
-
-      &:nth-child(3) {
-        width: 200px;
-      }
-    }
+  input {
+    padding: 15px 20px;
+    border: none;
+    outline: none;
+    color: @dark;
+    background-color: white;
+    box-shadow: none;
   }
 }
