--- a/css/less/components/_footer.less
+++ b/css/less/components/_footer.less
@@ -1,6 +1,11 @@
 footer {
   > div {
     grid-template-columns: 2fr 2fr;
+
+    //Medium
+    @media screen and (max-width: 768px) {
+      grid-template-columns: 1fr;
+    }
     padding: 15px 10%;
   }
 
