Fixing overlay image in live demo

--- a/css/less/components/_search.less
+++ b/css/less/components/_search.less
@@ -3,7 +3,7 @@
     width: 100vw;
     height: @height;
     content: "";
-    background: url(../../../img/search-overlay.png) no-repeat top;
+    background: url(/img/search-overlay.png) no-repeat top;
     opacity: 0.1;
     top: @top;
     left: @left;
