--- a/css/index.css
+++ b/css/index.css
@@ -491,7 +491,7 @@ header #profile-image-container img {
   width: 100vw;
   height: 400px;
   content: "";
-  background: url(../../../img/search-overlay.png) no-repeat top;
+  background: url(/img/search-overlay.png) no-repeat top;
   opacity: 0.1;
   top: -15%;
   left: -20%;
