--- a/css/less/utils/_layout.less
+++ b/css/less/utils/_layout.less
@@ -54,6 +54,10 @@
     grid-template-columns: repeat(2, 1fr);
     .container-full-width;
   }
+  //Small
+  @media screen and (max-width: 576px) {
+    grid-template-columns: 1fr;
+  }
 
   gap: 15px;
 
