--- a/css/less/components/_hot-ads.less
+++ b/css/less/components/_hot-ads.less
@@ -3,6 +3,7 @@
 
   h2 {
     .container;
+
     margin: 20px auto;
     font-size: 1.8em;
     font-weight: normal;
@@ -30,6 +31,7 @@
     section {
       padding-left: 10px;
       .flex-container;
+
       flex-direction: column;
       .flex-justify-between;
 
@@ -38,6 +40,7 @@
         padding: 0;
         .flex-justify-between;
       }
+
       h2 {
         padding: 0;
         font-size: 2em;
@@ -71,37 +74,39 @@
       padding-top: 5px;
       .primary-btn;
       .capitalize;
+
       &:first-of-type {
         border-radius: 15px 0 0 15px;
       }
+
       &:last-of-type {
         margin: 0 0 0 -3px;
         border-radius: 0 15px 15px 0;
       }
     }
 
-   
-
     a {
       color: @pink;
     }
 
-    &:after {
+    &::after {
       .nextItem;
+
       content: ">";
       right: 10%;
     }
 
-    &:before {
+    &::before {
       .nextItem;
+
       content: "<";
       left: 10%;
     }
 
     &:hover {
       //   TODO:fix the hover
-      &:before,
-      &:after {
+      &::before,
+      &::after {
         background-color: @pink;
         color: white;
       }
