--- a/css/less/components/_search.less
+++ b/css/less/components/_search.less
@@ -1,5 +1,5 @@
 .backOverlay(@height: 400px, @top:-15% , @left:-20% ) {
-  &:after {
+  &::after {
     width: 100vw;
     height: @height;
     content: "";
@@ -15,7 +15,7 @@
   }
 
   &:hover {
-    &:after {
+    &::after {
       opacity: 0.2;
       transform: rotate(10deg);
     }
@@ -25,7 +25,6 @@
 .text-alignment {
   > div {
     flex-direction: column;
-
     justify-content: space-around;
     height: 100%;
   }
@@ -35,6 +34,7 @@
   .search-container {
     .margin-x-auto;
     .grid-container;
+
     grid-template-columns: 1fr 3fr 2fr 0.5fr;
     column-gap: 5px;
 
@@ -52,9 +52,12 @@
 
     > button {
       .flat-btn;
+
       padding: 15px 20px;
+
       &:last-child {
         background-color: @dark;
+
         a {
           color: white;
         }
@@ -69,20 +72,25 @@
     .backOverlay();
     .search-input-container;
     .text-alignment;
+
     text-align: center;
   }
+
   &#results {
     height: auto;
     .search-input-container;
+
     .search-container {
       margin: 25px 0;
     }
     .text-alignment;
+
     > div {
       padding: 15px 15%;
       text-align: left;
     }
   }
+
   position: relative;
   background-color: @pink;
   color: white;
