--- a/css/less/typography/_fonts.less
+++ b/css/less/typography/_fonts.less
@@ -8,29 +8,29 @@
 
 @font-face {
   font-family: "Gotham";
-  src: url("/fonts/Hero Light.otf") format("opentype");
-  font-weight: light;
+  src: url("/fonts/Hero-Light.otf") format("opentype");
+  font-weight: normal;
   font-style: normal;
 }
 
 //Helvetica Neue Font
 @font-face {
   font-family: "Helvetica Neue";
-  src: url("/fonts/HelveticaNeue Light.ttf") format("truetype");
-  font-weight: light;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Helvetica Neue";
-  src: url("/fonts/HelveticaNeue Medium.ttf") format("truetype");
+  src: url("/fonts/HelveticaNeue-Light.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: "Helvetica Neue";
-  src: url("/fonts/Helvetica Neu Bold.ttf") format("truetype");
+  src: url("/fonts/HelveticaNeue-Medium.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Helvetica Neue";
+  src: url("/fonts/Helvetica-Neu-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
 }
