--- a/css/less/components/_search.less
+++ b/css/less/components/_search.less
@@ -50,6 +50,15 @@
       row-gap: 5px;
     }
 
+    > a {
+      .flat-btn;
+      .capitalize;
+
+      padding: 15px 20px;
+      background-color: @dark;
+      color: white;
+    }
+
     > button {
       .flat-btn;
 
@@ -57,10 +66,7 @@
 
       &:last-child {
         background-color: @dark;
-
-        a {
-          color: white;
-        }
+        color: white;
       }
     }
   }
